// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconLock /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLock /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLock /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLock /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLock /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconLock /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconLock /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconLock /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconLock /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconLock /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconLock /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconLock /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M209.8 100H197V72.3C197 36.8 168.2 8 132.7 8h-9.4C87.8 8 59 36.8 59 72.3V100H47.2c-3.4 0-6.2 2.8-6.2 6.2v135.5c0 3.4 2.8 6.2 6.2 6.2h162.5c3.4 0 6.2-2.8 6.2-6.2V106.2c.1-3.4-2.7-6.2-6.1-6.2zM87 72c0-20.2 15.8-37 36.4-37h9.1c20.2 0 36.4 16.3 36.4 37v28H87V72zm31.1 148.2l-34.6-37.9 15.8-14.4 18.2 20.2 43.2-50.9 16.3 13.9-58.9 69.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLock /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
